# j4all-core-platform

./: .env.example  .env.test  .gitattributes  .gitignore  .vercelignore  DEPLOYMENT.md  Dockerfile  FASTAPI_SUMMARY.md  LICENSE  README.md  app.py  chatbot.py  deployment-checklist.md  ingest_db.py  integrate.py  lumilens.py  prompt.py  pyproject.toml  render.yaml  requirements-render.txt  requirements.txt  run_server.py  vercel.json
.github/workflows/: fastapi-vercel.yml  render-deploy.yml  update_space.yml
api/: README.md  config.py  hello.py  index.py  main.py  simple.py
api/core/: exceptions.py  logging.py
api/legal_analysis/: handler.py  llm_analysis.py  prompts.py  pydantic_schemas.py
api/middleware/: __init__.py  auth.py  rate_limit.py
api/routers/: analysis.py  chat.py  documents.py  health.py
api/services/: chat_service.py  vector_service.py
chroma_db/: chroma.sqlite3
chroma_db/0982583c-f1f8-43c8-9fca-4966f74f4316/: index_metadata.pickle
chroma_db/68901d28-6aa8-40bd-b2f7-efc73321bbb1/: index_metadata.pickle
chroma_db/af16957a-8861-4622-9a6f-08bee1dff119/: index_metadata.pickle
data/extracted_excel/2025/Decision/: BEARDSLEY_04-22-25_7954, 7958__FHC_CONTRACTING_INC (DECISION).xlsx  CHADWICK_03-24-25_7269__JITA_CONTRACTING_INC (DECISION).xlsx  GOODMAN_01-15-25_8210__TESLA_LILIANA_REYES_RAMIREZ (DECISION).xlsx  GOODMAN_06-20-25_8324__COVENTINA_WATER_LLC (DECISION).xlsx  KANG_03-11-25_7965__CGS_ACE_SECURITY_LLC (DECISION).xlsx  KANG_05-08-25_8301__TOP_LEVEL_CONSTRUCTION_COMPANY.xlsx  KULLBERG_01-02-25_8256__JOHN_BLANKSON (DECISION).xlsx  KULLBERG_02-21-25_7101, 7131__WILLIAMS_BUILDING_COMPANY_INC (DECISION).xlsx  LESTER_02-25-25_7789__NORTHLAND_CIANBRO_A_JOINT_VENTURE (DECISION).xlsx  LESTER_03-11-25_7966__FEDRESULTS_INC (DECISION).xlsx  LESTER_03-21-25_6149__ALARES_CONSTRUCTION_INC (DECISION).xlsx  OROURKE_02-19-25_6659__WISE_DEVELOPMENTS_LLC (DECISION).xlsx  (+12 more)
data/fre/: federal-rules-of-evidence-dec-1-2024_0.md
dev/: lumilens.py
llm/: __init__.py  prompt.py
notebooks/: draft_prompts_for_extraction.ipynb  fre_dataset.ipynb
notebooks/constants/: system_prompts.py
pipeline/: __init__.py  extraction_database_ingestion_chroma.py  extraction_database_ingestion_postgres.py  extraction_prompts.py  fetch_disputes.py  ingest.py  load.py
scripts/: generate_requirements.sh
tests/: conftest.py  investigate_active_code.py  test_chat_active.py  test_config_active.py  test_health.py  test_health_active.py
