[tool.poetry]
name = "lumilens"
version = "0.1.0"
description = "A j4all prototype."
authors = ["Yen <ykrunner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-community = "^0.3.20"
langchain = "^0.3.21"
langchain-text-splitters = "^0.3.7"
langchain-openai = "^0.3.11"
# python-dotenv = "^1.1.0"
gradio = "^5.23.1"
pypdf = "^5.4.0"
huggingface-hub = "^0.30.1"
beautifulsoup4 = "^4.13.3"
requests = "^2.32.3"
tiktoken = "^0.9.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
