[tool.poetry]
name = "lumilens"
version = "0.1.0"
description = "A j4all prototype."
authors = ["Yen <ykrunner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

# Core LangChain dependencies
langchain = "^0.3.21"
langchain-community = "^0.3.20"
langchain-openai = "^0.3.11"
langchain-text-splitters = "^0.3.7"

# Web framework
streamlit = "^1.32.0"

# Document processing
pypdf = "^5.4.0"
beautifulsoup4 = "^4.13.3"

# AI/ML dependencies
huggingface-hub = "^0.30.1"
chromadb = "^1.0.0"
transformers = "^4.52.0"
torch = "^2.0.0"
tiktoken = "^0.9.0"

# HTTP and utilities
requests = "^2.32.3"
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
